fixed alert spacing, added buttons to bottom and linked to items page. need to filter the results of those buttons or add items to a div on the page

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -80,6 +80,7 @@ a {
 .btn-default.profile {
   height: 35px;
   padding-top: 7px;
+  margin-right: 30px;
 }
 
 input#search {
@@ -107,7 +108,7 @@ input#search {
 }
 
 .row.container {
-  margin: 0;
+  margin-top: -5px;
 }
 
 .container {
@@ -125,18 +126,18 @@ input#search {
 //Welcome Page
 
 #welcome {
-  background-image: image-url('helicopter_pic.jpg');
+  background-image: image-url('helicopter_pic_sm.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  height: 800px;
+  height: 500px;
 }
 
 #welcome .welcome-side h1 {
   font-family: 'Montserrat', Arial, sans-serif;
   height: 100%;
   color: white;
-  font-size: 90px;
-  padding: 475px 0 0 50px;
+  font-size: 70px;
+  padding: 305px 0 0 15px;
 }
 
 // Rich's Treasure Trove of CSS
